--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {},
     
     "autoload":{
-        "files": ["src/Conso/config/app.php"],
+        "files": ["src/Conso/config/helpers.php"],
         "psr-4":{
             "Conso\\" : "src/Conso/"
         }
