--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,12 @@
         "psr-4":{
             "Tests\\" : "test/"
         }
+    },
+
+    "scripts" : {
+
+        "post-root-package-install": [
+            "@php -r \"file_exists('conso') || copy('conso', 'conso');\""
+        ]
     }
 }
