--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
             "email": "contact@lotfio.net"
         }
     ],
-    "require": {},
+
+    "require-dev": {
+        "phpunit/phpunit" : "<=7.5"
+    },
     
     "autoload":{
         "files": ["src/Conso/config/helpers.php"],
