--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
             "email": "contact@lotfio.net"
         }
     ],
+
+    "require-dev": {
+        "phpunit/phpunit" : "8.1.5"
+    },
     
     "autoload":{
         "files": ["src/Conso/config/helpers.php"],
