--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,16 @@
         }
     ],
 
+    "require": {
+        "lotfio/oofile" : ">=0.1.0"
+    },
+
     "require-dev": {
         "phpunit/phpunit" : "8.1.5"
     },
 
     "autoload":{
-        "files": ["src/Conso/config/helpers.php"],
+        "files": ["src/Conso/conf/helpers.php"],
         "psr-4":{
             "Conso\\" : "src/Conso/"
         }
