add input unit tests

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
             "Conso\\"    : "src/Conso"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\" : "tests"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit" : "^8"
     }
