--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "^8"
+    },
+    "scripts": {
+        "test": [
+            "phpunit"
+        ]
     }
 }
