--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "lotfio/conso",
-    "description": "console applications for geeks",
+    "description": "console applications for cool kids",
     "authors": [
         {
             "name": "lotfio",
